build(docker-compose): use image from hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 
 services:
   dev:
-    build: .
+    image: nampdn/tensorflow-pytorch:latest
     environment:
       - ACCEPT_INTEL_PYTHON_EULA=yes
     ports:
