--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker run -it --rm -v $(realpath ~/notebooks):/tf/notebooks -p 8888:8888 tensorflow/tensorflow:latest-jupyter
 version: "3"
 
 services:
@@ -10,3 +9,4 @@ services:
       - 8888:8888
     volumes:
       - ./src:/tf/notebooks
+      - ./jupyter:/root/.jupyter
